--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -20,4 +22,3 @@
     "vite": "^5.0.8"
   }
 }
-
